--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Табела со Докази - Hybrid</title>
+    <title>Табела со докази</title>
     <style>
         :root {
             --bg: #f5f5f5;
