--- a/S_M_U_R_O_P.html
+++ b/S_M_U_R_O_P.html
@@ -3711,5 +3711,6 @@
     
     <div class="credit-watermark">Created by Blagoj Nasev</div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="home-button.js"></script>
 </body>
 </html>
