--- a/cyrillic-whiteboard-enhanced.html
+++ b/cyrillic-whiteboard-enhanced.html
@@ -1706,5 +1706,6 @@
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
     </script>
+    <script src="home-button.js"></script>
 </body>
 </html>
