--- a/BookmarksPlus.html
+++ b/BookmarksPlus.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Канбан Обележувачи / Kanban Bookmarks</title>
+  <title>Bookmarks+</title>
   <style>
     :root{
       /* Light Theme */
@@ -846,8 +846,8 @@
   <div class="app">
     <header>
       <div>
-        <h1>📋 <span data-t="title">Канбан Обележувачи</span></h1>
-        <p class="sub" data-t="subtitle">Влечете картички меѓу колони. Пуштете датотеки за додавање.</p>
+        <h1>📋 <span data-t="title">Bookmarks</span></h1>
+        <p class="sub" data-t="subtitle"></p>
       </div>
       <div class="toolbar">
         <!-- Theme Toggle -->
