--- a/S_M_U_R_O_P.html
+++ b/S_M_U_R_O_P.html
@@ -1030,7 +1030,7 @@
             </h1>
             <h2 style="font-size: 1.1em; margin: 8px 0; opacity: 0.95;">Кабинет за слух, говор, глас, алтернатива и аугментативна комуникација</h2>
             <h3 style="font-size: 0.85em; margin: 8px 0; opacity: 0.85;"> Интегриран дигитален систем за евиденција и следење на инклузивната поддршка </h3>
-            <h4 style="font-size: 0.85em; margin: 8px 0; opacity: 0.85;">Платформа за управување ученици со неделен распоред на третмани и напредокот во оперативниот план електронскио досие </h4>
+            <h4 style="font-size: 0.85em; margin: 8px 0; opacity: 0.85;">Платформа за управување со листа на ученици, неделен распоред, оперативни планови, електронско досие, тријажни тестови, аудиограми </h4>
         </div>
     </div>
     
